--- a/Umbrella2.Pipeline.Standard/Umbrella2.Pipeline.Standard.csproj
+++ b/Umbrella2.Pipeline.Standard/Umbrella2.Pipeline.Standard.csproj
@@ -17,10 +17,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
-    <AssemblyName></AssemblyName>
-    <SignAssembly>false</SignAssembly>
-    <DelaySign>false</DelaySign>
-    <AssemblyOriginatorKeyFile></AssemblyOriginatorKeyFile>
+    <LangVersion>7</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -28,27 +25,34 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <LangVersion>7</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Umbrella2.Algorithms">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Debug\Umbrella2.Algorithms.dll</HintPath>
-    </Reference>
-    <Reference Include="Umbrella2.IO">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Debug\Umbrella2.IO.dll</HintPath>
-    </Reference>
-    <Reference Include="Umbrella2.SharedBase">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Debug\Umbrella2.SharedBase.dll</HintPath>
-    </Reference>
-    <Reference Include="Umbrella2.Algorithms.Images">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Debug\Umbrella2.Algorithms.Images.dll</HintPath>
+    <Reference Include="System.Drawing" />
+    <Reference Include="Umbrella2.Numerical.Portable">
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Numerical.Portable.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Algorithms.Detections">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Debug\Umbrella2.Algorithms.Detections.dll</HintPath>
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Release\Umbrella2.Algorithms.Detections.dll</HintPath>
     </Reference>
-    <Reference Include="System.Drawing" />
+    <Reference Include="Umbrella2.Algorithms">
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Algorithms.dll</HintPath>
+    </Reference>
+    <Reference Include="Umbrella2.Algorithms.Images">
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Algorithms.Images.dll</HintPath>
+    </Reference>
+    <Reference Include="Umbrella2.IO">
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.IO.dll</HintPath>
+    </Reference>
+    <Reference Include="Umbrella2.Pipeline.EIOAlgorithms">
+      <HintPath>..\..\Umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.Pipeline.EIOAlgorithms.dll</HintPath>
+    </Reference>
     <Reference Include="Umbrella2.Pipeline.ExtraIO">
-      <HintPath>..\..\Umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.Pipeline.ExtraIO.dll</HintPath>
+      <HintPath>..\..\Umbrella2\Umbrella2.Pipeline.ExtraIO\bin\Release\Umbrella2.Pipeline.ExtraIO.dll</HintPath>
+    </Reference>
+    <Reference Include="Umbrella2.SharedBase">
+      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.SharedBase.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
