--- a/Umbrella2.Pipeline.Standard/Umbrella2.Pipeline.Standard.csproj
+++ b/Umbrella2.Pipeline.Standard/Umbrella2.Pipeline.Standard.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -31,25 +31,25 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="Umbrella2.Numerical.Portable">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Numerical.Portable.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Numerical.Portable\bin\Debug\Umbrella2.Numerical.Portable.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Algorithms.Detections">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Detections\bin\Release\Umbrella2.Algorithms.Detections.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.Algorithms.Detections.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Algorithms">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Algorithms.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.Algorithms.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Algorithms.Images">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.Algorithms.Images.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Algorithms.Images\bin\Debug\Umbrella2.Algorithms.Images.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.IO">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.IO.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.IO.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Pipeline.ExtraIO">
-      <HintPath>..\..\Umbrella2\Umbrella2.Pipeline.ExtraIO\bin\Release\Umbrella2.Pipeline.ExtraIO.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.Pipeline.ExtraIO.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.SharedBase">
-      <HintPath>..\..\Umbrella2\Umbrella2.Algorithms.Images\bin\Release\Umbrella2.SharedBase.dll</HintPath>
+      <HintPath>..\..\umbrella2\Umbrella2.Visualizer.Winforms\bin\Debug\Umbrella2.SharedBase.dll</HintPath>
     </Reference>
     <Reference Include="Umbrella2.Pipeline.EIOAlgorithms">
       <HintPath>..\..\Umbrella2\Umbrella2.Pipeline.EIOAlgorithms\bin\Debug\Umbrella2.Pipeline.EIOAlgorithms.dll</HintPath>
